Bug 325070 - Saving new table design for the first time does not clear history of edits
Summary: Saving new table design for the first time does not clear history of edits
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.7.3
Platform: unspecified All
: NOR normal
Target Milestone: 2.7
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-18 19:17 UTC by Jarosław Staniek
Modified: 2013-09-18 19:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7.4
Sentry Crash Report:
staniek: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2013-09-18 19:17:00 UTC
Saving new table design (i.e. saving for the first time) does not clear history of edits. As a result edits that wouldn't require re-creating table (and removing data) actually require that. Visible Decimal Places proper is such property for example.




Reproducible: Always

Steps to Reproduce:
1. Start design a new table and insert one field "a" of type Floating Point
2. Switch to Data View (accept saving table design). Table will be created.
3. Enter at least one record in the Data View.
4. Switch back to the Design View.
5. Set Visible Decimal Places property from Auto to 2 for the field "a"
6. Click Save for this design.

Actual Results:  
Kexi warns about complete removing the table (with data).


Expected Results:  
Setting the Visible Decimal Places property this way shouldn't require full table removal. The table design should be silently saved with data kept intact.

Found out as the real cause of issues by the way of this discussion: https://forum.kde.org/viewtopic.php?f=221&t=117299&p=292589#p292589
Comment 1 Jarosław Staniek 2013-09-18 19:22:13 UTC
Git commit 58e5e0581dd8affef12a4186cb3dca38fcb6000e by Jaroslaw Staniek.
Committed on 18/09/2013 at 19:18.
Pushed by staniek into branch 'master'.

Saving new table design for the first time does not clear history of edits

M  +1    -0    kexi/plugins/tables/kexitabledesignerview.cpp

http://commits.kde.org/calligra/58e5e0581dd8affef12a4186cb3dca38fcb6000e
Comment 2 Jarosław Staniek 2013-09-18 19:25:03 UTC
Git commit 16672fca1373c253b391601f13f1b10141e6a3bf by Jaroslaw Staniek.
Committed on 18/09/2013 at 19:18.
Pushed by staniek into branch 'calligra/2.7'.

Saving new table design for the first time does not clear history of edits
FIXED-IN:2.7.4

M  +1    -0    kexi/plugins/tables/kexitabledesignerview.cpp

http://commits.kde.org/calligra/16672fca1373c253b391601f13f1b10141e6a3bf