Saving new table design for the first time does not clear history of edits

BUG:325070
FIXED-IN:2.7.4